handle generics
